--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Gym
 @using Gym.Models
+@using Microsoft.AspNetCore.Identity
+@using Gym.Areas.Identity
+@using Gym.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
